--- a/style.css
+++ b/style.css
@@ -1,11 +1,4 @@
-body {
-    margin: 0;
-    padding: 0;
-    background: #FFF;
-    overflow-x: hidden;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
+/* body {
 
 a,
 button {
@@ -26,7 +19,7 @@ a:hover {
     z-index: 100000;
     background: #FFFFFF url("img/pageload-spinner.gif") no-repeat center center;
 }
-
+*/
 .bloc {
     width: 100%;
     clear: both;
@@ -38,39 +31,8 @@ a:hover {
     background-size: cover;
     position: relative;
 }
+/*
 
-.bloc .container {
-    padding-left: 0;
-    padding-right: 0;
-}
-
-.bloc-lg {
-    padding: 100px 50px;
-}
-
-.bloc-md {
-    padding: 50px;
-}
-
-.bloc-sm {
-    padding: 20px 50px;
-}
-
-.bg-center,
-.bg-l-edge,
-.bg-r-edge,
-.bg-t-edge,
-.bg-b-edge,
-.bg-tl-edge,
-.bg-bl-edge,
-.bg-tr-edge,
-.bg-br-edge,
-.bg-repeat {
-    -webkit-background-size: auto!important;
-    -moz-background-size: auto!important;
-    -o-background-size: auto!important;
-    background-size: auto!important;
-}
 
 .bg-repeat {
     background: repeat;
@@ -79,7 +41,7 @@ a:hover {
 .bg-t-edge {
     background: top no-repeat;
 }
-
+*/
 .bloc-bg-texture::before {
     content: "";
     background-size: 2px 2px;
@@ -90,14 +52,15 @@ a:hover {
     right: 0;
 }
 
+
 .texture-paper::before {
     background: url("img/texture-paper.png");
     background-size: 280px 280px;
 }
 
-.b-parallax {
-    background-attachment: fixed;
-}
+/*
+
+
 
 .d-bloc {
     color: rgba(255, 255, 255, .7);
@@ -292,20 +255,6 @@ a:hover {
     z-index: 1;
 }
 
-.navbar-brand {
-    height: auto;
-    padding: 3px 15px;
-    font-size: 25px;
-    font-weight: normal;
-    font-weight: 600;
-    line-height: 44px;
-}
-
-.navbar-brand img {
-    max-height: 200px;
-    margin: 0 5px 0 0;
-    display: inline;
-}
 
 .navbar-brand img[src$=svg] {
     min-width: 100px;
@@ -315,32 +264,13 @@ a:hover {
     margin: 0;
 }
 
-.navbar .nav {
-    padding-top: 2px;
-    margin-right: -16px;
-    float: right;
-    z-index: 1;
-}
-
 .nav > li {
     float: left;
     margin-top: 4px;
     font-size: 16px;
 }
 
-.navbar-nav .open .dropdown-menu > li > a {
-    text-align: inherit;
-}
 
-.nav > li a:hover,
-.nav > li a:focus {
-    background: transparent;
-}
-
-.navbar-toggle {
-    margin: 10px 10px 0 0;
-    border: 0px;
-}
 
 .navbar-toggle:hover {
     background: transparent!important;
@@ -808,23 +738,10 @@ h4 {
     color: #364577!important;
     border-color: #364577!important;
 }
+*/
 
-.bg-dots-bg {
-    background-image: url("img/dots-bg.png");
-}
 
-.bg-lines-h2-bg {
-    background-image: url("img/lines-h2-bg.png");
-}
-
-.bg-banniere {
-    background-image: url("img/la-chouette-agence-banniere.jpg");
-}
-
-.bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
-}
-
+/*
 @media (max-width: 1024px) {
     .bloc {
         padding-left: 20px;
@@ -860,34 +777,7 @@ h4 {
     }
 }
 
-@media (max-width: 991px) {
-    .container {
-        width: 100%;
-    }
-    .b-parallax {
-        background-attachment: scroll;
-    }
-    .page-container,
-    #hero-bloc {
-        overflow-x: hidden;
-        position: relative;
-    }
-    .bloc {
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
-    }
-    .bloc-group,
-    .bloc-group .bloc {
-        display: block;
-        width: 100%;
-    }
-    .bloc-fill-screen .fill-bloc-top-edge,
-    .bloc-fill-screen .fill-bloc-bottom-edge {
-        padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
-    }
-}
+
 
 @media (max-width: 767px) {
     .page-container {
@@ -1038,5 +928,53 @@ h4 {
 @media (max-width: 767px) {
     .bloc-mob-center-text {
         text-align: center;
+    }
+} */
+
+
+
+/*---------GESTION DES BACKGROUNDS-*/
+.b-parallax {
+    background-attachment: fixed;
+}
+.bg-dots-bg {
+    background-image: url("img/dots-bg.png");
+}
+
+.bg-lines-h2-bg {
+    background-image: url("img/lines-h2-bg.png");
+}
+
+.bg-banniere {
+    background-image: url("img/la-chouette-agence-banniere.jpg");
+}
+
+.bg-presentation {
+    background-image: url("img/image-de-presentation.jpg");
+}
+
+/*--------NAVBAR-------*/
+
+.navbar-brand img {
+    height: 40px;
+}
+
+.navbar .show li {
+    background-color: #F2F2F2;
+    padding: none !important;
+    border-top: 1px solid #CCC;
+    border-bottom: 1px solid #ccc;
+}
+.navbar .show li:hover {
+    background-color: #ebebeb;
+}
+
+.navbar-light .navbar-toggler {
+    border: none;
+}
+
+@media screen and (max-width: 991px) {
+    .b-parallax {
+        background-attachment: scroll;
     }
 }
