--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ button {
     transition: all .3s ease-in-out;
     outline: none !important;
     color: #303030!important;
+    text-decoration: underline;
 }
 
 a:hover {
