--- a/css/style.css
+++ b/css/style.css
@@ -63,17 +63,8 @@ a:hover {
     background-attachment: fixed;
 }
 
-.mg-lg {
-    margin-top: 10px;
-    margin-bottom: 40px;
-}
-
 .btn {
     margin: 0 5px 5px 0;
-}
-
-.btn.pull-right {
-    margin: 0 0 5px 5px;
 }
 
 .btn-d,
@@ -103,7 +94,8 @@ button {
     color:#303030;
     text-shadow: 0 1px 2px rgba(255, 255, 255, .3);
 }
-  .icon-md:hover{  
+
+.icon-md:hover{  
     color:white!important;
 }
 
@@ -245,21 +237,10 @@ a[data-lightbox]:hover img {
     background: none;
 }
 /*----------------------------------------------*/
-.statement-bloc-text {
-    line-height: 26px;
-    font-style: italic;
-    font-size: 20px;
-    text-align: center;
-    font-weight: lighter;
-    max-width: 520px;
-    margin: auto auto auto auto;
-}
-
 .tight-width-whitespace {
     max-width: 600px;
     margin: auto auto auto auto;
 }
-
 
 .cta-hero {
     margin-top: 22px;
@@ -289,14 +270,6 @@ a[data-lightbox]:hover img {
 
 .btn-atomic-tangerine:hover {
     background: #c27956 !important;
-}
-
-.ltc-atomic-tangerine {
-    color: #F3976C !important;
-}
-
-.ltc-atomic-tangerine:hover {
-    color: #c27956 !important;
 }
 
 .icon-dark-slate-blue {
@@ -442,8 +415,8 @@ a[data-lightbox]:hover img {
     .bloc-tile-2 .container,
     .bloc-tile-3 .container,
     .bloc-tile-4 .container,
-    .bloc-fill-screen .fill-bloc-top-edge,
-    .bloc-fill-screen .fill-bloc-bottom-edge {
+    .bloc-fill-screen .fil-top-edge,
+    .bloc-fill-screen .fil-bottom-edge {
         padding-left: 0;
         padding-right: 0;
     }
